style.css
*, *::before, *::after {
    box-sizing: border-box;
}

.container{
    max-width: 80%;
    margin: 0 auto;
    background-color: #fff;
    padding: 1em;
    border-radius: 15px;

}

.qr-img{
    max-width: 100%;
    border-radius: 10px;

}

.qr-comp{
    max-width: 375px;
    border-radius: 15px;
    background-color: #fff;
    padding: 1em;
    box-shadow: 2px 8px 16px 0px rgba(0,0,0,0.2);
}
/* miss me with BEM, all my homies hate BEM */
body{
    background-color: hsl(212, 45%, 89%);
    display: flex;
    flex-flow: column;
    justify-content: space-evenly;
    padding: 1em 0;
    /* Lord KP forgive me for my view port sins */
    height: 100vh;
}

article{
    font-family: Outfit;
    text-align: center;
}

h1{
    font-weight: 700;
}

p{
    font-weight: 400;
    color: hsl(220, 15%, 55%);
}

footer{
    width: 21em;
    margin: 0 auto;
    font-family: comic neue;
    text-align: justify;
}

@media (min-width:1440px){
    body{
        background-color: white;
        display: flex;
        justify-content: center;
    }
     .big-container{
        background-color: hsl(212, 45%, 89%) ;
        width: 90%;
        padding: 8em;
        margin: 5em auto;
        box-shadow: 2px 8px 16px 0px rgba(0,0,0,0.2);
     }
}

